<resources>
    <string name="app_name">About Me</string>
    <string name="name">Mi primera app</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">Hi, my name is Victoria.
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer y dormir porque es un placer de vida eso
        \n\n Me encanta comer
        \n\n Me encanta comer
        \n\n Me encanta comer
        \n\n Me encanta comer
        \n\n Me encanta comer
        \n\n Me encanta comer
        \n\n Me encanta comer
        \n\n Me encanta comer
        \n\n Me encanta comer
        \n\n Me encanta comer
        \n\n Me encanta dormir
        \n\n Más cosas
        \n\n Sigue bajando
        \n\n Sigue bajando
        \n\n Yo creo que ya vale
        \n\n</string>
    <string name="Aleatorio">Aleatorio</string>
    <string name="ic_menu_view">ic_menu_view</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="DONE">DONE</string>
</resources>